# Charitap

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  background.js  contentScript.js  manifest.json  package-lock.json  package.json  test.html  test_login.js  tsconfig.anchor.json
atlas/: vector-search-index.json
atlas/triggers/: process-roundups-function.js
backend/: .env.example  cronProcessor.js  package-lock.json  package.json  server.js
backend/api/: index.js
backend/middleware/: auth.js
backend/models/: Charity.js  CharityApplication.js  RoundUp.js  SolanaPaymentIntent.js  Transaction.js  User.js  WellspringDistribution.js  WellspringDonation.js  WellspringInventory.js
backend/routes/: adminRoutes.js  authRoutes.js  charityNominationRoutes.js  charityRoutes.js  healthRoutes.js  impactRoutes.js  roundUpRoutes.js  solanaRoutes.js  triggerRoutes.js  walletRoutes.js  wellspringRoutes.js
backend/scripts/: backfill-charity-search.js  bootstrap-local-usdc-mint.js  createAdmins.js  dedup-and-seed-charities.js  seedAdmins.js
backend/services/: email-service.js  emailService.js  embedding-service.js  roundup-settlement-service.js  solana-ledger-client.js  solana-mint-bootstrap.js  usdc-conversion-service.js  zip-geocoder.js
backend/utils/: accessControl.js
docs/: atlas-solana-setup.md
programs/charitap_receipts/: Cargo.toml
programs/charitap_receipts/src/: lib.rs
src/: App.js  App.test.js  setupTests.js
src/auth/: AuthContext.js
src/components/: Activity.js  Charities.js  Dashboard.js  Home.js  (+4 more)
tests/: charitap_receipts.ts
(+6 files in other folders)
