[package]
name = "charitap_receipts"
version = "0.1.0"
description = "Charitap Solana donation receipt program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "charitap_receipts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
